syntax = "proto3";

package contracts;

option go_package = "go/contracts";

message StripeCustomer {
  string stripe_id = 1;
  string firestore_id = 2;
  repeated string payment_methods = 3;
}

message PaymentRequest {
  string firestore_id = 1;
  int64 amount_aud = 2;
}

message Transaction {
  string firestore_id = 1;
  string payment_method = 2;
  int64 amount_aud = 3;
  int64 completed_ms = 4;
  string payment_id = 5;
}

message CustomerBalance {
  string firestore_id = 1;
  int64 amount_aud = 2;  // 1000 = 1
  int64 last_update_ms = 3;
}